Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-4710

There is an error in control audit log file size number

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.5.0
    • Impala 2.9.0
    • Backend
    • None

    Description

      There is an error in control audit log file size number. When I set max_audit_event_log_file_size of impalad to N, the max size of audit event log file is N+1 which is larger than the former actually.

      Attachments

        Activity

          People

            davidxdh Davy Xu
            davidxdh Davy Xu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: