IMPALA-4710: There is an error in control audit log file size number

The comparison logic of log file size and maximum config is wrong,
leading to log file size is greater than the maximum config.

This patch corrects the error, makes both are consistent.

Change-Id: I1808d69359102d63b732469b440c9c7675a371b7
Reviewed-on: http://gerrit.cloudera.org:8080/5582
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins